ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cookie-app
  annotations: {}
    #cert-manager.io/issuer: "letsencrypt-staging"
  namespace: cookie-deployment
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cookieclicker.gm-nig-ltd.tech
    secretName: cookieclicker-secret # must match the name of the certicate secretName we issued
  rules:
  - host: cookieclicker.gm-nig-ltd.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cookie-app
            port:
              number: 80 # port pointing to the port on the service and not the targetPort
